my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ESYNTAX_time_unit/ESYNTAX_time_unit.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ESYNTAX_time_unit.dml:17:13: error ESYNTAX: syntax error at 'invalid': expected time unit ('s' or 'ps' or 'cycles')
